implements #51, reindex is needed on deployment